# smartlead-cli-sdk-oss

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILLS.md  pyproject.toml
.github/workflows/: publish.yml
agent/: README.md  agent.py  tools.py
cli/: __init__.py  _output.py  main.py
src/smartlead/: __init__.py  _base_client.py  _client.py  _config.py  _errors.py
src/smartlead/models/: __init__.py  analytics.py  block_list.py  campaigns.py  clients.py  common.py  email_accounts.py  global_analytics.py  leads.py  master_inbox.py  sequences.py  smart_delivery.py  smart_prospect.py  smart_senders.py  webhooks.py
src/smartlead/modules/: __init__.py  analytics.py  block_list.py  campaigns.py  clients.py  email_accounts.py  global_analytics.py  leads.py  master_inbox.py  sequences.py  smart_delivery.py  smart_prospect.py  smart_senders.py  webhooks.py
