[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartlead-cli"
version = "0.1.0"
description = "Unofficial CLI and AI agent for the Smartlead API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
smartlead = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/smartlead", "cli"]
