[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartlead-sdk"
version = "0.1.0"
description = "Unofficial Python SDK and AI agent for the Smartlead API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
agent = ["anthropic>=0.40"]

[tool.hatch.build.targets.wheel]
packages = ["src/smartlead"]
